bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:2: error: type mismatch;
 found   : Int(20)
 required: Boolean
  return (10<a<20 || 10<b<20)
               ^In1020:2: error: type mismatch;
 found   : Int(20)
 required: Boolean
  return (10<a<20 || 10<b<20)
                          ^